* Add explicit dependency on tslib * Add points in addition to nodes and edges to the schema ** Create a bare point interface with common fields ** Added bench, bollard, manhole, street-lamp, waste-basket points * Move common fields to the BaseNodeFields interface * Move common fields to the BasePointFields interface * Corrected an error in the raised curb fields

--- a/jsonschema/package.json
+++ b/jsonschema/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/geojson": "^7946.0.8",
+    "tslib": "^2.6.1",
     "typescript-json-schema": "^0.53.0"
   }
 }
