--- a/jsonschema/package.json
+++ b/jsonschema/package.json
@@ -5,7 +5,7 @@
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "build-schema": "typescript-json-schema --required --noExtraProps --constAsEnum --id https://sidewalks.uw.edu/opensidewalks/%npm_package_version%/schema.json ./tsconfig.json \"OpenSidewalksFeatureCollection\" > ../opensidewalks.schema.json",
+    "build-schema": "typescript-json-schema --required --noExtraProps --constAsEnum --id https://sidewalks.washington.edu/opensidewalks/%npm_package_version%/schema.json ./tsconfig.json \"OpenSidewalksFeatureCollection\" > ../opensidewalks.schema.json",
     "build-schema-with-extra-props": "ts-node ./src/generate.ts"
   },
   "dependencies": {
